# POLIMIcontrol-lib

./: .gitignore  CMakeLists.txt  FIR_filter.cpp  FIR_filter.h  Makefile  README.md  continuous_ss.cpp  continuous_ss.h  differentiator.cpp  differentiator.h  differenziator.cpp  differenziator.h  discrete_derivative.cpp  discrete_derivative.h  discrete_integrator.cpp  discrete_integrator.h  discrete_ss.cpp  discrete_ss.h  discrete_tf.cpp  discrete_tf.h
CMakeModules/: FindMATIO.cmake  POLIMIcontrolConfig.cmake
controller/: AGS_controller.cpp  AGS_controller.h  PIDISA_controller.cpp  PID_controller.cpp  PID_controller.h
include/: FIR_filter.h  PIDISA_controller.h  PID_controller.h  continuous_ss.h  differentiator.h  discrete_derivative.h  discrete_integrator.h  discrete_ss.h  discrete_tf.h  matfile_fun.h
test/: AGS_controller_sim.slx  Makefile  PID_casccontr_sim_odeint.cpp  PID_controller_sim.cpp  PID_controller_sim.slx  PID_controller_sim_odeint.cpp  test_AGS_compute_matrices.cpp  test_AGS_compute_matrices.m  test_AGS_compute_matrices.mat  test_AGS_controller.cpp  test_FIR_filter.cpp  test_FIR_filter.m  test_PIDISA_controller.cpp  test_PIDISA_controller.m  test_PIDISA_controller_model.slx  test_PID_controller.cpp  test_PID_controller.m  test_PID_controller_model.slx  test_continuous_ss_lpv.cpp  test_continuous_ss_lpv.m  test_continuous_ss_lpv_2.cpp  test_continuous_ss_lpv_model.slx  test_continuous_ss_ti.cpp  test_continuous_ss_ti.m  test_continuous_ss_ti_single.cpp  test_continuous_ss_tv.cpp  test_continuous_ss_tv.m  test_continuous_ss_tv_2.cpp  test_discrete_ss.cpp  (+24 more)
(+2 files in other folders)
